Prevent margin collapse also at the end of the main element.

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -41,8 +41,8 @@
   main {
     background-color: $base-bg-color;
 
-    // Prevent margin collapse between header and the first child.
-    &::before {
+    // Prevent margin collapse around the content.
+    &::before, &::after {
       content: ' ';
 
       display: block;
